tests/valid/58235_unit_as_input_and_output/unit_as_input_and_output.agu
-- Author: 58235, António Almeida

let id (u) : Unit -> Unit = u

let _ : Unit = print(id(unit))