tests/invalid-syntax/58235_id_invalid_start_character/id_invalid_characters.agu
-- Author: 58235, António Almeida
-- ! is not a valid character for Identifiers

let inval!dId : Int = 56